--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -7,7 +7,8 @@
     </div>
     <div class="navbar-right">
       <div class="form-group search">
-        <input type="text" class="form-control search__input" placeholder="Search">
+        <input type="text" class="form-control search__input" placeholder="Search" ng-model="$ctrl.search">
+        <div>{{$ctrl.search}}</div>
         <span class="glyphicon glyphicon-search search__icon"></span>
       </div>
       <div class="cart">
