--- a/src/app/components/navbar/navbar.scss
+++ b/src/app/components/navbar/navbar.scss
@@ -16,7 +16,7 @@
   color: #fff;
 
   &:hover{
-    color: lightblue;
+    color: #ADD8E6;
   }
 }
 .navbar-right{
@@ -34,7 +34,7 @@
   border-radius: 20px !important;
 
   @include placeholder {
-    text-indent: 0px;
+    text-indent: 0;
     transition: text-indent 300ms;
   }
 
@@ -49,7 +49,7 @@
   position: absolute !important;
   top: 10px !important;
   left: 10px !important;
-  color: grey;
+  color: #808080;
 }
 
 .cart{
@@ -61,9 +61,9 @@
 }
 
 .cart__link{
-  color: white;
+  color: #fff;
 
   &:hover{
-    color: lightblue;
+    color: #ADD8E6;
   }
 }
